--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "adrian/string-formatter",
-    "require": {
+    "require-dev": {
         "phpunit/phpunit": "^6.2",
         "friendsofphp/php-cs-fixer": "^2.3"
     },
@@ -9,5 +9,15 @@
             "name": "adrian",
             "email": "petricevicadrian@gmail.com"
         }
-    ]
+    ],
+    "autoload":{
+        "psr-4":{
+            "":"src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    }
 }
